--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
             padding: 0;
         }
         header {
-            background-color: #8d3535;
+            background-color: #DDC2A9;
             color: #fff;
             padding: 20px;
             text-align: center;
