--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
     <main>
         <section>
             <h2>Bem-vindo ao meu site!</h2>
-            <p>Este é um exemplo básico de estrutura de site.</p>
+            <p>vou começar a falar do site batata .</p>
         </section>
     </main>
     
