--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,8 @@
 </head>
 <body>
     <header>
-        <h1> o aquecimento global</h1>
+        <h1>O aquecimento global</h1>
     </header>
-    
     <main>
         <section>
             <h2>Bem-vindo ao meu site!</h2>
@@ -18,7 +17,7 @@
     </main>
     
     <footer>
-        <p>© 2024 Meu Site. Todos os direitos reservados.</p>
+        <p></p>
     </footer>
 </body>
 </html>
