--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,13 @@
     </header>
     <main>
         <section>
-            <h2>Bem-vindo ao meu site!</h2>
-            <p>vou começar a falar do site batata .</p>
+            <img src="image 2.png" alt="terra">
+            <h2>O que é?</h2>
+            <p>O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
+               Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem). 
+               A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
+               metano (CH4), óxido nitroso (N²O) e
+            </p>
         </section>
     </main>
     
