--- a/index.htm
+++ b/index.htm
@@ -17,13 +17,13 @@
             <p>O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
                Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem). 
                A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-               metano (CH4), óxido nitroso (N²O) e
+               metano (CH4), óxido nitroso (N²O)
             </p>
         </section>
     </main>
     
     <footer>
-        <p></p>
+        <p>aaaaa</p>
     </footer>
 </body>
 </html>
