--- a/index.htm
+++ b/index.htm
@@ -14,10 +14,20 @@
         <section>
             <img src="image 2.png" alt="terra">
             <h2>O que é?</h2>
-            <p>O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
-               Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem). 
-               A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-               metano (CH4), óxido nitroso (N²O)
+            <p>
+            O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
+            Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem). 
+            A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
+            metano (CH4), óxido nitroso (N²O)
+            </p>
+        </section>
+        <section>
+            <img src="image 1.png" alt="efeito-stufa">
+            <h3>Como evitar?</h3>
+            <p>
+            Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia limpa e renováveis,
+            como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis fósseis e seus derivados,
+            como o petróleo e a gasolina. Procure deixar o carro em casa.
             </p>
         </section>
     </main>
