--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
             O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
             Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem). 
             A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-            metano (CH4), óxido nitroso (N²O)
+            metano (CH4) e óxido nitroso (N²O)
             </p>
         </section>
         <section>
