--- a/index.htm
+++ b/index.htm
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Meu Site</title>
 </head>
+
 <body>
     <header>
         <h1>O aquecimento global</h1>
     </header>
     <main>
-        <section>
+        <section class="intro">
             <img src="image 2.png" alt="terra">
             <h2>O que é?</h2>
             <p>
-            O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
-            Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem). 
-            A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-            metano (CH4) e óxido nitroso (N²O)
+                O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
+                Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
+                A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
+                metano (CH4) e óxido nitroso (N²O)
             </p>
         </section>
         <section>
             <img src="image 1.png" alt="efeito-stufa">
             <h3>Como evitar?</h3>
             <p>
-            Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia limpa e renováveis,
-            como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis fósseis e seus derivados,
-            como o petróleo e a gasolina. Procure deixar o carro em casa.
+                Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
+                limpa e renováveis,
+                como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
+                fósseis e seus derivados,
+                como o petróleo e a gasolina. Procure deixar o carro em casa.
             </p>
         </section>
     </main>
-    
+
     <footer>
         <p></p>
     </footer>
 </body>
+
 </html>
