--- a/index.htm
+++ b/index.htm
@@ -15,16 +15,18 @@
     <main>
         <section class="intro">
             <img src="image 2.png" alt="terra">
-            <h2>O que é?</h2>
-            <p>
-                O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
-                Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
-                A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-                metano (CH4) e óxido nitroso (N²O)
-            </p>
+            <div>
+                <h2>O que é?</h2>
+                <p>
+                    O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
+                    Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
+                    A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
+                    metano (CH4) e óxido nitroso (N²O)
+                </p>
+            </div>
         </section>
         <section>
-            <img src="image 1.png" alt="efeito-stufa">
+            <img class="" src="image 1.png" alt="efeito-stufa">
             <h3>Como evitar?</h3>
             <p>
                 Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
