--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
     <main>
         <section class="intro">
             <img src="image 2.png" alt="terra">
-            <div>
+            <div class="">
                 <h2>O que é?</h2>
                 <p>
                     O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
