--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
         <section class="intro">
             <img src="image 2.png" alt="terra">
             <div class="textos">
-                <h2>O que é?</h2>
+                <h2 class="sumir">O que é?</h2>
                 <p>
                     O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
                     Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
