--- a/index.htm
+++ b/index.htm
@@ -14,9 +14,9 @@
     </header>
     <main>
         <section class="intro">
-            <img src="image 2.png" alt="terra">
+            <img class="imagens" src="image 2.png" alt="terra">
             <div class="textos">
-                <h2 class="sumir">O que é?</h2>
+                <h2>O que é?</h2>
                 <p>
                     O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
                     Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
@@ -26,15 +26,17 @@
             </div>
         </section>
         <section>
-            <img class="" src="image 1.png" alt="efeito-stufa">
-            <h3>Como evitar?</h3>
-            <p>
-                Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
-                limpa e renováveis,
-                como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
-                fósseis e seus derivados,
-                como o petróleo e a gasolina. Procure deixar o carro em casa.
-            </p>
+            <img class="imagens" src="image 1.png" alt="efeito-stufa">
+            <div class="textos">
+                <h3>Como evitar?</h3>
+                <p>
+                    Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
+                    limpa e renováveis,
+                    como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
+                    fósseis e seus derivados,
+                    como o petróleo e a gasolina. Procure deixar o carro em casa.
+                </p>
+            </div>
         </section>
     </main>
 
