--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section class="intro">
             <img class="imagens" src="image 1.png" alt="efeito-stufa">
             <div class="textos">
                 <h3>Como evitar?</h3>
