--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
             <img class="imagens" src="image 1.png" alt="efeito-stufa">
             <div class="textos">
                 <h3>Como evitar?</h3>
-                <p>
+                <p class="texto-2">
                     Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
                     limpa e renováveis,
                     como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
