--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="textos">
                 <h2>O que é?</h2>
                 <p>
-                    O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
+                    <strong></strong>O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
                     Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
                     A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-                    metano (CH4) e óxido nitroso (N²O)
+                    metano (CH4) e óxido nitroso (N²O)</strong>
                 </p>
             </div>
         </section>
@@ -29,11 +29,11 @@
             <div class="textos">
                 <h3>Como evitar?</h3>
                 <p class="texto-2">
-                    Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
+                   <strong>Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
                     limpa e renováveis,
                     como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
                     fósseis e seus derivados,
-                    como o petróleo e a gasolina. Procure deixar o carro em casa.
+                    como o petróleo e a gasolina. Procure deixar o carro em casa.</strong>
                 </p>
             </div>
             <img class="imagens" src="image 1.png" alt="efeito-stufa">
