--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Meu Site</title>
+    <title>site informativo</title>
 </head>
 
 <body>
     <header>
         <h1>O aquecimento global</h1>
+        <button><a href="pagina2.html">proximo</a></button>
     </header>
     <main>
         <section class="intro">
