--- a/pagina2.html
+++ b/pagina2.html
@@ -8,4 +8,11 @@
 <html lang="pt-BR">
     <title>Aquecimento Global</title>
     <h1>aquecimento global</h1>
+    <p>
+        "As conferências ambientais são reuniões em que líderes de diversos países debatem questões relacionadas à preservação do meio ambiente e ao desenvolvimento sustentável. Foi a partir da segunda metade do século XVIII que se iniciaram os primeiros estudos ecológicos. Contudo, somente na década de 1960, no período Pós-Segunda Guerra Mundial, que as questões ambientais passaram a ser discutidas com vigor, em resposta, principalmente, ao período industrial. Esse período inseriu nas indústrias e no meio rural técnicas inovadoras que intensificaram a produção, acentuando a exploração de recursos naturais.
+
+É válido ressaltar que os impactos ambientais intensificaram-se a partir da Revolução Industrial, que mudou todo o cenário mundial em decorrência dos avanços tecnológicos, do modo capitalista de produção, do aumento da produção e, consequentemente, do consumo exagerado. O mundo passou a ser assolado por várias catástrofes naturais, que têm despertado na sociedade, nos Estados e na comunidade científica a consciência sobre a gravidade dos impactos sofridos pelo meio ambiente e sobre a necessidade de propor medidas que diminuam os efeitos da ação humana."
+
+Veja mais sobre "Conferências ambientais" em: https://brasilescola.uol.com.br/geografia/conferencias-ambientais.htm
+    </p>
 </head>
