--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./pagina2.css">
 <html lang="pt-BR">
     <title>Aquecimento Global</title>
-    <h1>aquecimento global</h1>
+    <h1>conferencias ambientais</h1>
     <p>
         "As conferências ambientais são reuniões em que líderes de diversos países debatem questões relacionadas à preservação do meio ambiente e ao desenvolvimento sustentável. Foi a partir da segunda metade do século XVIII que se iniciaram os primeiros estudos ecológicos. Contudo, somente na década de 1960, no período Pós-Segunda Guerra Mundial, que as questões ambientais passaram a ser discutidas com vigor, em resposta, principalmente, ao período industrial. Esse período inseriu nas indústrias e no meio rural técnicas inovadoras que intensificaram a produção, acentuando a exploração de recursos naturais.
 
