--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>Bernardo:n7 && Caue:n8</p>
+        <p>Bernardo:n7 & Caue:n8</p>
     </footer>
 </body>
 
