--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <div class="textos">
                 <h3>Como evitar?</h3>
                 <p class="texto-2">
-                   <strong>Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
+                    Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
                     limpa e renováveis,
                     como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
                     fósseis e seus derivados,
-                    como o petróleo e a gasolina. Procure deixar o carro em casa.</strong>
+                    como o petróleo e a gasolina. Procure deixar o carro em casa.
                 </p>
             </div>
             <img class="imagens" src="image 1.png" alt="efeito-stufa">
