--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="textos">
                 <h2>O que é?</h2>
                 <p>
-                    <strong></strong>O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
+                    O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
                     Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
                     A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-                    metano (CH4) e óxido nitroso (N²O)</strong>
+                    metano (CH4) e óxido nitroso (N²O)
                 </p>
             </div>
         </section>
