--- a/pagina2.html
+++ b/pagina2.html
@@ -17,33 +17,40 @@
     <h2>conferências ambientais</h2>
     <img src="7b1d77556a1408efd644576bdcee1584.webp" alt="conferências">
     
-    <div>
+    <div class="textobemlongo">
         <p>
-        As conferências ambientais da ONU (Organização das Nações Unidas) têm desempenhado um papel crucial na promoção da sustentabilidade e na proteção do meio ambiente global. Estas conferências reúnem líderes mundiais, cientistas, ONGs e outros stakeholders para discutir e formular políticas e ações ambientais. A seguir, estão algumas das principais conferências ambientais da ONU:
+        As conferências ambientais da ONU (Organização das Nações Unidas)
+        têm desempenhado um papel crucial na promoção da sustentabilidade
+        e na proteção do meio ambiente global. Estas conferências reúnem líderes mundiais, cientistas, ONGs e outros stakeholders
+        para discutir e formular políticas e ações ambientais. A seguir, estão algumas das principais conferências ambientais da ONU:
+        </p>
 
-<strong>Conferência de Estocolmo</strong> (1972)
-- **Nome Completo:** Conferência das Nações Unidas sobre o Meio Ambiente Humano
-- **Local:** Estocolmo, Suécia
-- **Principais Resultados:** 
-  - Primeira conferência internacional a colocar questões ambientais na agenda global.
-  - Estabelecimento do Programa das Nações Unidas para o Meio Ambiente (PNUMA).
-  - Declaração de Estocolmo, que incluiu 26 princípios sobre meio ambiente e desenvolvimento humano.
-
-<strong>Conferência do Rio</strong> (1992)
-- **Nome Completo:** Conferência das Nações Unidas sobre Meio Ambiente e Desenvolvimento (Rio-92 ou ECO-92)
-- **Local:** Rio de Janeiro, Brasil
-- **Principais Resultados:**
-  - Agenda 21, um plano de ação para o desenvolvimento sustentável global.
-  - Convenção-Quadro das Nações Unidas sobre Mudança do Clima (UNFCCC).
-  - Convenção sobre Diversidade Biológica (CBD).
-  - Declaração do Rio sobre Meio Ambiente e Desenvolvimento.
-  - Declaração de Princípios sobre Florestas.
-
-<strong>Cúpula do Milênio</strong> (2000)
-- **Local:** Nova York, EUA
-- **Principais Resultados:**
-  - Estabelecimento dos Objetivos de Desenvolvimento do Milênio (ODM), que incluíam metas ambientais.
-
+            <p>
+                <strong>Conferência de Estocolmo</strong> (1972)
+                - Nome Completo: Conferência das Nações Unidas sobre o Meio Ambiente Humano
+                - Local: Estocolmo, Suécia
+                - Principais Resultados: 
+                - Primeira conferência internacional a colocar questões ambientais na agenda global.
+                - Estabelecimento do Programa das Nações Unidas para o Meio Ambiente (PNUMA).
+                - Declaração de Estocolmo, que incluiu 26 princípios sobre meio ambiente e desenvolvimento humano.
+            </p>
+            <p>
+                <strong>Conferência do Rio</strong> (1992)
+                - Nome Completo: Conferência das Nações Unidas sobre Meio Ambiente e Desenvolvimento (Rio-92 ou ECO-92)
+                - Local: Rio de Janeiro, Brasil
+                - Principais Resultados:
+                - Agenda 21, um plano de ação para o desenvolvimento sustentável global.
+                - Convenção-Quadro das Nações Unidas sobre Mudança do Clima (UNFCCC).
+                - Convenção sobre Diversidade Biológica (CBD).
+                - Declaração do Rio sobre Meio Ambiente e Desenvolvimento.
+                - Declaração de Princípios sobre Florestas.
+            </p>
+            <p>
+                <strong>Cúpula do Milênio</strong> (2000)
+                - Local: Nova York, EUA
+                - Principais Resultados:
+                - Estabelecimento dos Objetivos de Desenvolvimento do Milênio (ODM), que incluíam metas ambientais.
+            </p>
   <strong>Cúpula Mundial sobre Desenvolvimento Sustentável</strong> (Rio+10) (2002)
 - **Local:** Joanesburgo, África do Sul
 - **Principais Resultados:**
