--- a/pagina2.html
+++ b/pagina2.html
@@ -51,37 +51,42 @@
                 - Principais Resultados:
                 - Estabelecimento dos Objetivos de Desenvolvimento do Milênio (ODM), que incluíam metas ambientais.
             </p>
-  <strong>Cúpula Mundial sobre Desenvolvimento Sustentável</strong> (Rio+10) (2002)
-- **Local:** Joanesburgo, África do Sul
-- **Principais Resultados:**
-  - Avaliação dos progressos desde a Rio-92.
-  - Foco em questões de água, saneamento, energia, saúde e biodiversidade.
-
-  <strong>Conferência Rio+20</strong> (2012)
-- **Nome Completo:** Conferência das Nações Unidas sobre Desenvolvimento Sustentável
-- **Local:** Rio de Janeiro, Brasil
-- **Principais Resultados:**
-  - Documento final "O Futuro que Queremos".
-  - Lançamento do processo para desenvolver os Objetivos de Desenvolvimento Sustentável (ODS).
-
-  <strong>conferências da ONU sobre Diversidade Biológica (COP da CBD)</strong>
-- **Principais Eventos:** 
-  - **COP1 (1995):** Berlim, Alemanha. Primeiro encontro após a UNFCCC entrar em vigor.
-  - **COP3 (1997):** Quioto, Japão. Protocolo de Quioto, que estabeleceu metas de redução de emissões para os países desenvolvidos.
-  - **COP21 (2015):** Paris, França. Acordo de Paris, um compromisso global para manter o aumento da temperatura global abaixo de 2°C e perseguir esforços para limitá-lo a 1,5°C.
-
-  <strong>Conferências da ONU sobre Diversidade Biológica (COP da CBD)</strong>
-- **Principais Eventos:**
-  - **COP10 (2010):** Nagoya, Japão. Protocolo de Nagoya sobre Acesso a Recursos Genéticos e a Partilha Justa e Equitativa dos Benefícios.
-
-  <strong>Conferências da ONU sobre Desertificação (COP da UNCCD)</strong>
-- **Principais Eventos:**
-  - Reuniões regulares para abordar a desertificação, degradação do solo e seca.
-
-Essas conferências representam apenas uma parte das numerosas reuniões e esforços contínuos da ONU para enfrentar os desafios ambientais globais. Cada uma dessas conferências contribuiu para a formação de políticas, acordos e práticas que visam promover o desenvolvimento sustentável e proteger o meio ambiente.
-        </p>
+            <p>
+                <strong>Cúpula Mundial sobre Desenvolvimento Sustentável</strong> (Rio+10) (2002)
+                - Local: Joanesburgo, África do Sul
+                - Principais Resultados:
+                - Avaliação dos progressos desde a Rio-92.
+                - Foco em questões de água, saneamento, energia, saúde e biodiversidade.
+            </p>
+            <p>
+                <strong>Conferência Rio+20</strong> (2012)
+                - Nome Completo: Conferência das Nações Unidas sobre Desenvolvimento Sustentável
+                - Local: Rio de Janeiro, Brasil
+                - Principais Resultados:
+                - Documento final "O Futuro que Queremos".
+                - Lançamento do processo para desenvolver os Objetivos de Desenvolvimento Sustentável (ODS).
+            </p>
+            <p>
+                <strong>conferências da ONU sobre Diversidade Biológica (COP da CBD)</strong>
+                - Principais Eventos: 
+                - COP1 (1995): Berlim, Alemanha. Primeiro encontro após a UNFCCC entrar em vigor.
+                - COP3 (1997): Quioto, Japão. Protocolo de Quioto, que estabeleceu metas de redução de emissões para os países desenvolvidos.
+                - COP21 (2015): Paris, França. Acordo de Paris, um compromisso global para manter o aumento da temperatura global abaixo de 2°C e perseguir esforços para limitá-lo a 1,5°C.
+            </p>
+            <p>  
+                <strong>Conferências da ONU sobre Diversidade Biológica (COP da CBD)</strong>
+                - Principais Eventos:
+                - COP10 (2010): Nagoya, Japão. Protocolo de Nagoya sobre Acesso a Recursos Genéticos e a Partilha Justa e Equitativa dos Benefícios.
+            </p>
+            <p>   
+                <strong>Conferências da ONU sobre Desertificação (COP da UNCCD)</strong>
+                - Principais Eventos:
+                - Reuniões regulares para abordar a desertificação, degradação do solo e seca.
+            </p>
+            <p>Essas conferências representam apenas uma parte das numerosas reuniões e esforços contínuos da ONU para enfrentar os desafios ambientais globais. Cada uma dessas conferências contribuiu para a formação de políticas, acordos e práticas que visam promover o desenvolvimento sustentável e proteger o meio ambiente.</p>
     </div>
     </main>
+    <footer><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwizsOHokf-GAxVmK7kGHXFcBf4QFnoECDMQAQ&url=https%3A%2F%2Fwww.educamaisbrasil.com.br%2Feducacao%2Fdicas%2Fqual-e-a-importancia-das-conferencias-ambientais&usg=AOvVaw3dJZQ8wA9mPLmQHJmRE5mz&opi=89978449">veja mais sobre as conferências</a></footer>
 </body>
     
 </html>
