--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
             <div class="textos">
                 <h2>O que é?</h2>
                 <p>
-                    O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos.
-                    Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).
-                    A Terra é coberta por uma camada de gases, composta por gás carbônico (CO²),
-                    metano (CH4) e óxido nitroso (N²O)
+                    O aquecimento global refere-se ao aumento gradual das temperaturas médias da atmosfera e dos oceanos da Terra. 
+                    Este fenômeno é causado principalmente pelo aumento das concentrações de gases de efeito estufa, como dióxido de carbono (CO₂),
+                    metano (CH₄) e óxidos de nitrogênio (NOₓ), na atmosfera. Esses gases retêm o calor do sol, impedindo que ele escape de volta para o espaço, 
+                    criando um efeito estufa.
+                </p>
+                <h4>As principais causas do aquecimento global incluem:</h4>
+
+                <p>Queima de combustíveis fósseis: A combustão de carvão, petróleo e gás natural para energia e transporte libera grandes quantidades
+                    de CO₂ na atmosfera.</p>
+                <p>Desmatamento: A derrubada de florestas diminui a quantidade de árvores que podem absorver CO₂, aumentando assim a concentração desse gás
+                    na atmosfera.</p>
+                <p>Agricultura intensiva: A criação de gado e o cultivo de arroz emitem grandes quantidades de metano, um potente gás de
+                    efeito estufa.</p>
+                <p>Atividades industriais: Certas indústrias liberam gases de efeito estufa diretamente ou indiretamente através do uso de energia.
+                </p>
+                <h5>Os efeitos do aquecimento global incluem:</h5>
+
+                <p>
+                    Aumento das temperaturas médias globais: Isso pode levar a ondas de calor mais frequentes e intensas.
+                    Derretimento das calotas polares e geleiras: Isso contribui para a elevação do nível do mar, ameaçando áreas costeiras.
+                    Mudanças nos padrões climáticos: Podem resultar em eventos climáticos extremos, como furacões, secas e inundações.
+                    Impactos na biodiversidade: Espécies de plantas e animais podem ser afetadas, com algumas enfrentando extinção devido à mudança nos seus habitats naturais.
                 </p>
             </div>
         </section>
