index.htmlindex.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     efeito estufa.</p>
                 <p>Atividades industriais: Certas indústrias liberam gases de efeito estufa diretamente ou indiretamente através do uso de energia.
                 </p>
-                <h5>Os efeitos do aquecimento global incluem:</h5>
+                <h4>Os efeitos do aquecimento global são:</h4>
 
                 <p>
                     Aumento das temperaturas médias globais: Isso pode levar a ondas de calor mais frequentes e intensas.
