--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
                 </p>
             </div>
         </section>
-        <h4>Os efeitos do aquecimento global são:</h4>
-
-        <p>
-            Aumento das temperaturas médias globais: Isso pode levar a ondas de calor mais frequentes e intensas.
-            Derretimento das calotas polares e geleiras: Isso contribui para a elevação do nível do mar, ameaçando áreas costeiras.
-            Mudanças nos padrões climáticos: Podem resultar em eventos climáticos extremos, como furacões, secas e inundações.
-            Impactos na biodiversidade: Espécies de plantas e animais podem ser afetadas, com algumas enfrentando extinção devido à mudança nos seus habitats naturais.
-        </p>
+        <section class="intro">
+            <div>
+            <h4>Os efeitos do aquecimento global são:</h4>
+            <p>
+                Aumento das temperaturas médias globais: Isso pode levar a ondas de calor mais frequentes e intensas.
+                Derretimento das calotas polares e geleiras: Isso contribui para a elevação do nível do mar, ameaçando áreas costeiras.
+                Mudanças nos padrões climáticos: Podem resultar em eventos climáticos extremos, como furacões, secas e inundações.
+                Impactos na biodiversidade: Espécies de plantas e animais podem ser afetadas, com algumas enfrentando extinção devido à mudança nos seus habitats naturais.
+            </p>
+            </div>
+        </section>
         <section class="intro">
             <div class="textos">
                 <h3>Como evitar?</h3>
