--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 </p>
             </div>
         </section>
+
         <section class="intro">
-            <div>
+            <div class="textos>
             <h4>Os efeitos do aquecimento global são:</h4>
             <p>
                 Aumento das temperaturas médias globais: Isso pode levar a ondas de calor mais frequentes e intensas.
