--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
 
         <section class="intro">
-            <div class="textos>
+            <div class="textos">
             <h4>Os efeitos do aquecimento global são:</h4>
             <p>
                 Aumento das temperaturas médias globais: Isso pode levar a ondas de calor mais frequentes e intensas.
