--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
             <div class="textos">
                 <h3>Como evitar?</h3>
                 <p class="texto-2">
-                    Desligue aparelhos e lâmpadas que não estão sendo usados. Dê preferência ao uso de fontes de energia
-                    limpa e renováveis,
-                    como a energia solar, a energia eólica (dos ventos) e a biomassa. Reduza o consumo de combustíveis
-                    fósseis e seus derivados,
-                    como o petróleo e a gasolina. Procure deixar o carro em casa.
+                    evitar o aquecimento global é uma tarefa que precisa de muitas frentes, e não pode ser
+                    realizada sozinha. É necessário muitas coisas grandes, como politicas governamentais que protegem
+                    a natureza e promovem tecnologias mais sustentaveis para a agricultura. Mas tambem é muito importante
+                    a parte pequena que você pode tomar nesse processo, como reduzir a emissão de gazes  de efeito estufa,
+                    mudança no meio de viver e de consumir e mais importante, espalhar o conhecimento dessas coisas que podem
+                    ser feitas.
                 </p>
             </div>
             <img class="imagens" src="image 1.png" alt="efeito-stufa">
