--- a/pagina2.html
+++ b/pagina2.html
@@ -14,10 +14,11 @@
         <button><a href="index.html">voltar</a></button>
     </header>
     <main>
+        <section class="textobemlongo">
     <h2>conferências ambientais</h2>
     <img src="7b1d77556a1408efd644576bdcee1584.webp" alt="conferências">
     
-    <div class="textobemlongo">
+    <div>
         <p>
         As conferências ambientais da ONU (Organização das Nações Unidas)
         têm desempenhado um papel crucial na promoção da sustentabilidade
@@ -85,6 +86,7 @@
             </p>
             <p>Essas conferências representam apenas uma parte das numerosas reuniões e esforços contínuos da ONU para enfrentar os desafios ambientais globais. Cada uma dessas conferências contribuiu para a formação de políticas, acordos e práticas que visam promover o desenvolvimento sustentável e proteger o meio ambiente.</p>
     </div>
+        </section>
     </main>
     <footer><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwizsOHokf-GAxVmK7kGHXFcBf4QFnoECDMQAQ&url=https%3A%2F%2Fwww.educamaisbrasil.com.br%2Feducacao%2Fdicas%2Fqual-e-a-importancia-das-conferencias-ambientais&usg=AOvVaw3dJZQ8wA9mPLmQHJmRE5mz&opi=89978449">veja mais sobre as conferências</a></footer>
 </body>
