--- a/pagina2.html
+++ b/pagina2.html
@@ -16,7 +16,7 @@
     <main>
         <section class="textobemlongo">
     <h2>conferências ambientais</h2>
-    <img src="7b1d77556a1408efd644576bdcee1584.webp" alt="conferências">
+    <img class="imagem3" src="7b1d77556a1408efd644576bdcee1584.webp" alt="conferências">
     
     <div>
         <p>
